--- a/CreditLimit.html
+++ b/CreditLimit.html
@@ -6,11 +6,15 @@
 <cashnet>
 result=0&
 respmessage=LookupSUCCESS&
-custcode=SARAVANAN98&
+custcode=SARAVANAN75&
 fname=SARAVANAN&
-lname=98&
-email=saravanan98@test.edu&
-maxamounttopay=10000
+lname=75&
+email=saravanan75@test.edu&
+maxamounttopay=10000&
+notecode=NOPAYMENT&
+noteexp=12/12/20202&
+noteepay=Y&
+notecashier=Y
 </cashnet>
 <BODY>
 </HTML>
