--- a/CreditLimit.html
+++ b/CreditLimit.html
@@ -11,10 +11,14 @@ fname=SARAVANAN&
 lname=75&
 email=saravanan75@test.edu&
 maxamounttopay=10000&
-notecode=NOPAYMENT&
-noteexp=12/12/2020&
-noteepay=Y&
-notecashier=Y
+notecode1=NOPAYMENT&
+noteexp1=12/12/2020&
+noteepay1=Y&
+notecashier1=Y&
+notecode1=ALLOWIPP&
+noteexp1=12/12/2020&
+noteepay1=Y&
+notecashier1=Y
 </cashnet>
 <BODY>
 </HTML>
