--- a/CreditLimit.html
+++ b/CreditLimit.html
@@ -11,14 +11,11 @@ fname=SARAVANAN&
 lname=75&
 email=saravanan75@test.edu&
 maxamounttopay=10000&
-notecode1=NOPAYMENT&
-noteexp1=12/12/2020&
-noteepay1=Y&
-notecashier1=Y&
+notecode=NOPAYMENT&
+noteexp=12/12/2020&
 notecode1=ALLOWIPP&
 noteexp1=12/12/2020&
-noteepay1=Y&
-notecashier1=Y
+notecnt=2
 </cashnet>
 <BODY>
 </HTML>
