--- a/CreditLimit.html
+++ b/CreditLimit.html
@@ -13,6 +13,9 @@ email=saravanan75@test.edu&
 maxamounttopay=10000&
 notecode=NOPAYMENT&
 noteexp=1/1/2020&
+notecode2=ALLOWIPP&
+noteexp2=12/12/2020&
+notecnt=2
 </cashnet>
 <BODY>
 </HTML>
