--- a/DynamicBill.html
+++ b/DynamicBill.html
@@ -1,200 +1,190 @@
 <cashnet>result=0&
-     lname=43&
-     fname=SARAVANAN&
-     custcode=SARAVANAN43&
-     custotherdata=&
-     lt;?
-     xml version="1.0"?
-     &
-     gt;
+lname=Oliver&
+fname=Thomas&
+custcode=002159919&
+notecode=R07&
+notecode2=A01&
+custotherdata=&
+lt;?
+xml version="1.0"?
 &
-     lt;Billing&
-     gt;&
-     lt;Main&
-     gt;&
-     lt;asofdate/&
-     gt;&
-     lt;stmt_date&
-     gt;08/07/2020&
-     lt;/stmt_date&
-     gt;&
-     lt;due_date/&
-     gt;&
-     lt;previous_balance&
-     gt;$5,765.97&
-     lt;/previous_balance&
-     gt;&
-     lt;total_due&
-     gt;$1,054.97&
-     lt;/total_due&
-     gt;&
-     lt;studentId&
-     gt;002159919&
-     lt;/studentId&
-     gt;&
-     lt;student_name&
-     gt;Thomas Oliver&
-     lt;/student_name&
-     gt;&
-     lt;addr1&
-     gt;5845 Edge Avenue&
-     lt;/addr1&
-     gt;&
-     lt;addr2&
-     gt;&
-     lt;/addr2&
-     gt;&
-     lt;addr3/&
-     gt;&
-     lt;addr4&
-     gt;Bensalem, PA 19020-2409&
-     lt;/addr4&
-     gt;&
-     lt;/Main&
-     gt;&
-     lt;activity&
-     gt;&
-     lt;bold&
-     gt;Y&
-     lt;/bold&
-     gt;&
-     lt;term/&
-     gt;&
-     lt;activity_date&
-     gt;07/31/2020&
-     lt;/activity_date&
-     gt;&
-     lt;activity_desc&
-     gt;*** Balance Forward ***&
-     lt;/activity_desc&
-     gt;&
-     lt;charge&
-     gt;$5,765.97&
-     lt;/charge&
-     gt;&
-     lt;credit/&
-     gt;&
-     lt;/activity&
-     gt;&
-     lt;activity/&
-     gt;&
-     lt;activity&
-     gt;&
-     lt;bold&
-     gt;Y&
-     lt;/bold&
-     gt;&
-     lt;activity_desc&
-     gt;Pending Financial Aid&
-     lt;/activity_desc&
-     gt;&
-     lt;/activity&
-     gt;&
-     lt;activity&
-     gt;&
-     lt;activity_date/&
-     gt;&
-     lt;term&
-     gt;2208&
-     lt;/term&
-     gt;&
-     lt;activity_desc&
-     gt;Men&
-     apos;s Cross Country/Track&
-     lt;/activity_desc&
-     gt;&
-     lt;credit&
-     gt;$1,000.00&
-     lt;/credit&
-     gt;&
-     lt;credit/&
-     gt;&
-     lt;/activity&
-     gt;&
-     lt;activity&
-     gt;&
-     lt;activity_date/&
-     gt;&
-     lt;term&
-     gt;2208&
-     lt;/term&
-     gt;&
-     lt;activity_desc&
-     gt;Direct Un-Sub Stafford Loan 1&
-     lt;/activity_desc&
-     gt;&
-     lt;credit&
-     gt;$3,711.00&
-     lt;/credit&
-     gt;&
-     lt;credit/&
-     gt;&
-     lt;/activity&
-     gt;&
-     lt;activity&
-     gt;&
-     lt;bold&
-     gt;Y&
-     lt;/bold&
-     gt;&
-     lt;align_right&
-     gt;Y&
-     lt;/align_right&
-     gt;&
-     lt;activity_desc&
-     gt;Subtotal&
-     lt;/activity_desc&
-     gt;&
-     lt;charge/&
-     gt;&
-     lt;credit&
-     gt;$4,711.00&
-     lt;/credit&
-     gt;&
-     lt;/activity&
-     gt;&
-     lt;/Billing&
-     gt;&
-     itemcode=2182&
-     balance=0&
-     itemcode2=2202&
-     balance2=0&
-     itemcode3=2192&
-     balance3=0&
-     itemcode4=2178&
-     balance4=0&
-     itemcode5=2188&
-     balance5=0&
-     itemcode6=2208&
-     balance6=1054.97&
-     itemcode7=2198&
-     balance7=0&
-     itemcode8=2172&
-     balance8=0&
-     itemcnt=8&
-     ippsourceamountcode=2182&
-     termcode=2182&
-     amount=0&
-     ippsourceamountcode2=2202&
-     termcode2=2202&
-     amount2=0&
-     ippsourceamountcode3=2192&
-     termcode3=2192&
-     amount3=0&
-     ippsourceamountcode4=2178&
-     t
-04:52:00 AM: ermcode4=2178&
-     amount4=0&
-     ippsourceamountcode5=2188&
-     termcode5=2188&
-     amount5=0&
-     ippsourceamountcode6=2208&
-     termcode6=2208&
-     amount6=1054.97&
-     ippsourceamountcode7=2198&
-     termcode7=2198&
-     amount7=0&
-     ippsourceamountcode8=2172&
-     termcode8=2172&
-     amount8=0&
-     ippsrcamtcnt=8</cashnet>
+gt;
+&
+lt;Billing&
+gt;&
+lt;Main&
+gt;&
+lt;asofdate/&
+gt;&
+lt;stmt_date&
+gt;06/15/2020&
+lt;/stmt_date&
+gt;&
+lt;due_date/&
+gt;&
+lt;previous_balance&
+gt;$0.00&
+lt;/previous_balance&
+gt;&
+lt;total_due&
+gt;$0.00&
+lt;/total_due&
+gt;&
+lt;studentId&
+gt;002159919&
+lt;/studentId&
+gt;&
+lt;student_name&
+gt;Thomas Oliver&
+lt;/student_name&
+gt;&
+lt;addr1&
+gt;5845 Edge Avenue&
+lt;/addr1&
+gt;&
+lt;addr2&
+gt;&
+lt;/addr2&
+gt;&
+lt;addr3/&
+gt;&
+lt;addr4&
+gt;Bensalem, PA 19020-2409&
+lt;/addr4&
+gt;&
+lt;/Main&
+gt;&
+lt;activity&
+gt;&
+lt;bold&
+gt;Y&
+lt;/bold&
+gt;&
+lt;term/&
+gt;&
+lt;activity_date&
+gt;04/08/2020&
+lt;/activity_date&
+gt;&
+lt;activity_desc&
+gt;*** Balance Forward ***&
+lt;/activity_desc&
+gt;&
+lt;charge&
+gt;$0.00&
+lt;/charge&
+gt;&
+lt;credit/&
+gt;&
+lt;/activity&
+gt;&
+lt;activity/&
+gt;&
+lt;activity&
+gt;&
+lt;bold&
+gt;Y&
+lt;/bold&
+gt;&
+lt;activity_desc&
+gt;Payments and Financial Aid&
+lt;/activity_desc&
+gt;&
+lt;/activity&
+gt;&
+lt;activity&
+gt;&
+lt;activity_date&
+gt;05/08/2020&
+lt;/activity_date&
+gt;&
+lt;term&
+gt;2202&
+lt;/term&
+gt;&
+lt;activity_desc&
+gt;KU Cares Grant&
+lt;/activity_desc&
+gt;&
+lt;charge/&
+gt;&
+lt;credit&
+gt;$295.00&
+lt;/credit&
+gt;&
+lt;/activity&
+gt;&
+lt;activity&
+gt;&
+lt;bold&
+gt;Y&
+lt;/bold&
+gt;&
+lt;activity_desc&
+gt;Refunds&
+lt;/activity_desc&
+gt;&
+lt;/activity&
+gt;&
+lt;activity&
+gt;&
+lt;activity_date&
+gt;05/08/2020&
+lt;/activity_date&
+gt;&
+lt;term&
+gt;2202&
+lt;/term&
+gt;&
+lt;activity_desc&
+gt;Bank Mobile Refund&
+lt;/activity_desc&
+gt;&
+lt;charge&
+gt;$295.00&
+lt;/charge&
+gt;&
+lt;credit/&
+gt;&
+lt;/activity&
+gt;&
+lt;/Billing&
+gt;&
+itemcode=2182&
+balance=0&
+itemcode2=2202&
+balance2=0&
+itemcode3=2192&
+balance3=0&
+itemcode4=2178&
+balance4=0&
+itemcode5=2188&
+balance5=0&
+itemcode6=2198&
+balance6=0&
+itemcode7=2172&
+balance7=0&
+itemcnt=7&
+ippsourceamountcode=2182&
+termcode=2182&
+amount=0&
+ippsourceamountcode2=2202&
+termcode2=2202&
+amount2=0&
+ippsourceamountcode3=2192&
+termcode3=2192&
+amount3=0&
+ippsourceamountcode4=2178&
+termcode4=2178&
+amount4=0&
+ippsourceamountcode5=2188&
+termcode5=2188&
+amount5=0&
+
+02:38:56 PM: ippsourceamountcode6=2198&
+termcode6=2198&
+amount6=0&
+ippsourceamountcode7=2172&
+termcode7=2172&
+amount7=0&
+ippsrcamtcnt=7</cashnet>
