--- a/DynamicBill.html
+++ b/DynamicBill.html
@@ -1,7 +1,7 @@
 <cashnet>result=0&
-lname=Oliver&
-fname=Thomas&
-custcode=002159919&
+lname=43&
+fname=SARAVANAN&
+custcode=SARAVANAN43&
 notecode=R07&
 notecode2=A01&
 custotherdata=&
