--- a/DynamicBill.html
+++ b/DynamicBill.html
@@ -2,8 +2,16 @@
 lname=43&
 fname=SARAVANAN&
 custcode=SARAVANAN43&
-notecode=R07&
-notecode2=A01&
+custgroup=S&
+email=saravanan43@test.com&
+notecnt=1&
+notecode=cusac&
+itemcnt=2&
+itemcode=EM-2CLASSES&
+balance=18177.7&
+itemcode2=TUITION&
+balance2=18177.7&
+ACTIVITYCNT=1&
 custotherdata=&
 lt;?
 xml version="1.0"?
@@ -150,41 +158,49 @@ lt;/activity&
 gt;&
 lt;/Billing&
 gt;&
-itemcode=2182&
-balance=0&
-itemcode2=2202&
-balance2=0&
-itemcode3=2192&
-balance3=0&
-itemcode4=2178&
-balance4=0&
-itemcode5=2188&
-balance5=0&
-itemcode6=2198&
-balance6=0&
-itemcode7=2172&
-balance7=0&
-itemcnt=7&
-ippsourceamountcode=2182&
-termcode=2182&
+ippsourceamountcode=IPPBALANCE&
+termcode=201510&
 amount=0&
-ippsourceamountcode2=2202&
-termcode2=2202&
+ippsourceamountcode2=IPPBALANCE&
+termcode2=201520&
 amount2=0&
-ippsourceamountcode3=2192&
-termcode3=2192&
+ippsourceamountcode3=IPPBALANCE&
+termcode3=201530&
 amount3=0&
-ippsourceamountcode4=2178&
-termcode4=2178&
+ippsourceamountcode4=IPPBALANCE&
+termcode4=201610&
 amount4=0&
-ippsourceamountcode5=2188&
-termcode5=2188&
+ippsourceamountcode5=IPPBALANCE&
+termcode5=201620&
 amount5=0&
-
-02:38:56 PM: ippsourceamountcode6=2198&
-termcode6=2198&
+ippsourceamountcode6=IPPBALANCE&
+termcode6=201630&
 amount6=0&
-ippsourceamountcode7=2172&
-termcode7=2172&
+ippsourceamountcode7=IPPBALANCE&
+termcode7=201710&
 amount7=0&
-ippsrcamtcnt=7</cashnet>
+ippsourceamountcode8=IPPBALANCE&
+termcode8=201720&
+amount8=0&
+ippsourceamountcode9=IPPBALANCE&
+termcode9=201730&
+amount9=0&
+ippsourceamountcode10=IPPBALANCE&
+termcode10=201810&
+amount10=0&
+ippsourceamountcode11=IPPBALANCE&
+termcode11=201820&
+amount11=0&
+ippsourceamountcode12=IPPBALANCE&
+termcode12=201830&
+amount12=0&
+ippsourceamountcode13=IPPBALANCE&
+termcode13=201910&
+amount13=0&
+ippsourceamountcode14=IPPBALANCE&
+termcode14=201920&
+amount14=0&
+ippsourceamountcode15=IPPBALANCE&
+termcode15=201930&
+amount15=1012.92&
+ippsrcamtcnt=15</cashnet>
